--- a/platformio.ini
+++ b/platformio.ini
@@ -1,17 +1,12 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
+board_build.partitions = partitions.csv
 framework = arduino
 monitor_speed = 115200
 upload_port = /dev/ttyUSB0
-monitor_port = /dev/ttyUSB0
+lib_deps =
+    https://github.com/pschatzmann/ESP32-A2DP.git
+    https://github.com/pschatzmann/arduino-audio-tools.git
+board_build.flash_size = 4MB
+check_prog_size = false
